# telegram-clients

./: .gitignore  .gitmodules  CMakeLists.txt  ClientWrapper.cpp  Downloader.cpp  README.md  TdMain.cpp  TdTask.cpp  main.cpp  task_api.cpp  td_downloader.cpp  td_example.cpp
backup/: CMakeLists.txt  README.md
backup/inc/: TdExample.hpp
inc/: ClientWrapper.hpp  Downloader.hpp  Task.hpp  TaskApi.hpp  TdExample.hpp  TdMain.hpp  TdTask.hpp  task_api.h
src/: ClientWrapper.cpp  Downloader.cpp  TdExample.cpp  TdMain.cpp  TdTask.cpp  task_api.cpp  td_downloader.cpp
